# platform.core.context.context-provider

./: AUTHORS  CMakeLists.txt  context-provider.pc.in
src/: CMakeLists.txt
src/activity/: Activity.cpp  Activity.h  ActivityBase.cpp  ActivityBase.h  ActivityTypes.h  CMakeLists.txt  CreateProvider.cpp  create.cpp
src/app-stats/: ActiveWindowMonitor.cpp  ActiveWindowMonitor.h  AppStatisticsTypes.h  AppStatsLogger.cpp  AppStatsLogger.h  AppStatsProvider.cpp  AppStatsProvider.h  AppStatsTypesInternal.h  CMakeLists.txt  CreateProvider.cpp  DbHandle.cpp  DbInit.cpp  DbInit.h  InstallMonitor.cpp  InstallMonitor.h  create.cpp
src/app-stats/app_inactive_detector/: AppInactiveDetector.cpp  AppInactiveDetector.h  AppInactiveDetectorTypes.h  InactiveDetector.cpp  InactiveDetector.h  InactiveDetectorClassificator.cpp  InactiveDetectorClassificator.h  InactiveDetectorClassificatorKmeans.cpp  InactiveDetectorClassificatorKmeans.h  InactiveDetectorClassificatorKmeansTypes.h  InactiveDetectorStorage.cpp  InactiveDetectorStorage.h  InactiveDetectorStorageQueries.h  InactiveDetectorWeight.cpp  InactiveDetectorWeight.h
src/battery-stats/: BatteryStatisticsTypes.h  BatteryStatsGetter.cpp  BatteryStatsGetter.h  BatteryStatsLogger.cpp  BatteryStatsLogger.h  BatteryStatsProvider.cpp  BatteryStatsProvider.h  CMakeLists.txt  CreateProvider.cpp  DbHandle.cpp  DbHandle.h  DbInit.cpp  DbInit.h  HeartManager.cpp  HeartManager.h
src/call/: CMakeLists.txt  Call.cpp  Call.h  CreateProvider.cpp  create.cpp
src/contacts/: CMakeLists.txt  Contacts.cpp  Contacts.h  CreateProvider.cpp  create.cpp
src/custom/: CMakeLists.txt  CreateProvider.cpp  CustomBase.cpp  CustomBase.h  CustomContextProvider.cpp  CustomManager.cpp  CustomManager.h  CustomProvider.cpp  CustomProvider.h  CustomTypes.h  custom_base.cpp  custom_base.h  custom_context_provider.cpp
src/device/: CMakeLists.txt  DeviceContextProvider.cpp  DeviceProviderBase.cpp  DeviceProviderBase.h  device_context_provider.cpp  device_provider_base.cpp  device_provider_base.h  provider_base.cpp  provider_base.h
src/device/activity/: Activity.h  ActivityBase.cpp  ActivityBase.h  activity.h  activity_base.cpp  activity_base.h  activity_types.h
src/device/social/: Call.cpp  Call.h  Contacts.cpp  Contacts.h  Email.cpp  Email.h  Message.cpp  Message.h  call.cpp  call.h  contacts.cpp  contacts.h  email.cpp  email.h  message.cpp  message.h  social_types.h
src/device/system/: Alarm.cpp  Alarm.h  Battery.cpp  Battery.h  Headphone.cpp  Headphone.h  Psmode.cpp  Psmode.h  SystemTypes.h  Time.cpp  Time.h  Wifi.cpp  Wifi.h  alarm.cpp  alarm.h  battery.cpp  battery.h  headphone.cpp  headphone.h  psmode.cpp  psmode.h  system_types.h  time.cpp  time.h  wifi.cpp  wifi.h
src/email/: CMakeLists.txt  CreateProvider.cpp  Email.cpp  Email.h  create.cpp
src/geofence/: CMakeLists.txt  CreateProvider.cpp  GeofenceMonitorHandle.cpp  GeofenceMonitorHandle.h  PlaceGeofenceProvider.cpp  PlaceGeofenceProvider.h  create.cpp
src/headphone/: CMakeLists.txt  CreateProvider.cpp  Headphone.cpp  Headphone.h  create.cpp
src/media-stats/: CMakeLists.txt  CreateProvider.cpp  DbHandle.cpp  DbHandle.h  MediaContentMonitor.cpp  MediaContentMonitor.h  MediaStatisticsTypes.h  MediaStatsLogger.cpp  MediaStatsLogger.h  MediaStatsProvider.cpp  MediaStatsProvider.h  create.cpp
src/media-stats/util/: CMakeLists.txt  MediaInfoUtil.cpp
src/message/: CMakeLists.txt  CreateProvider.cpp  Message.cpp  Message.h  create.cpp
src/my-place/: CMakeLists.txt  CreateProvider.cpp  PlaceRecognitionProvider.cpp  PlaceRecognitionProvider.h  create.cpp  place_recognition.cpp  place_recognition.h  place_recognition_types.h
src/my-place/facade/: UserPlaces.cpp  UserPlaces.h  UserPlacesTypes.cpp  UserPlacesTypes.h  user_places.cpp  user_places.h  user_places_types.cpp
src/my-place/place/: CMakeLists.txt  Graph.cpp  PlaceCateger.cpp  PlaceCateger.h  PlacesDetector.cpp  PlacesDetector.h  graph.cpp  place_categer.cpp  (+3 more)
src/place/: CMakeLists.txt  PlaceContextProvider.cpp  place_context_provider.cpp
src/prediction/: assoc_rule.cpp  assoc_rule.h  assoc_rule_miner.h  assoc_rule_producer.cpp  assoc_rule_producer.h  basket.cpp  basket.h  basket_compressor.cpp  basket_compressor.h  basket_filter.cpp  basket_producer.cpp  basket_producer.h  event.cpp  event.h  item.cpp  item_id_set.h  item_set.h  item_string_converter.cpp  item_string_converter.h  single_category_item_id_filter.h  weight_apriori.h
src/sensor/: CMakeLists.txt  ClientInfo.cpp  ClientInfo.h  CreateProvider.cpp  Pedometer.cpp  Pedometer.h  PedometerLogger.cpp  PedometerLogger.h  PedometerQuerier.cpp  PedometerQuerier.h  Pressure.cpp  Pressure.h  PressureLogger.cpp  PressureLogger.h  PressureQuerier.cpp  PressureQuerier.h  Querier.cpp  Querier.h  SensorLogger.cpp  SensorLogger.h  SensorProvider.cpp  SensorProvider.h  SensorProxy.cpp  SensorProxy.h  TimeUtil.cpp  TimeUtil.h  TypesInternal.h  UninstallMonitor.cpp  UninstallMonitor.h
src/shared/: BasicProvider.cpp  BasicProvider.h  CMakeLists.txt  CreateProvider.h  DbHandleBase.cpp  DbHandleBase.h  DeviceContextProvider.cpp  PlaceContextProvider.cpp  ProviderTypes.h  SocialTypes.h  StatisticsContextProvider.cpp  SystemInfo.cpp  SystemInfo.h  Util.cpp  Util.h  WifiWrapper.cpp  WifiWrapper.h  create.h
src/social-stats/: CMakeLists.txt  CreateProvider.cpp  DbHandle.cpp  DbHandle.h  LogAggregator.cpp  LogAggregator.h  SocialStatisticsTypes.h  SocialStatsLogger.cpp  SocialStatsLogger.h  SocialStatsProvider.cpp  SocialStatsProvider.h  create.cpp
src/statistics/: CMakeLists.txt  StatisticsContextProvider.cpp  statistics_context_provider.cpp
src/system/: Battery.cpp  Battery.h  CMakeLists.txt  Charger.cpp  Charger.h  CreateProvider.cpp  Gps.cpp  Gps.h  Psmode.cpp  Psmode.h  RuntimeInfoBase.cpp  RuntimeInfoBase.h  Usb.cpp  Usb.h  create.cpp
src/time/: Alarm.cpp  Alarm.h  CMakeLists.txt  CreateProvider.cpp  Time.cpp  Time.h  create.cpp
src/wifi/: CMakeLists.txt  CreateProvider.cpp  Wifi.cpp  Wifi.h  create.cpp
test/: CMakeLists.txt  context-provider-test.manifest
test/src/: main.cpp
(+294 files in other folders)
